Cosmetics using append instead of +
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@5195 5fb7f6ec-07c1-534a-b4ca-9155e429e800